[package]
name = "img_watermarker"
version = "0.0.1"
authors = ["AshGw ashrefgw@proton.me"]
edition = "2021"
description = "A module for watermarking images"
repository = "https://github.com/ashgw/img_watermarker"


[lib]
name = "img_watermarker"
path = "src/lib.rs"

[[bin]]
name = "img_watermarker"
path = "src/main.rs"


[dependencies]
image = "0.24.7"
imageproc = "0.23.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3